# PROJECTX

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/adder/: CMakeLists.txt  adder.cpp  adder.h
src/divider/: CMakeLists.txt  divider.cpp  divider.h
src/multiplicator/: CMakeLists.txt  multiplicator.cpp  multiplicator.h
src/substractor/: CMakeLists.txt  substractor.cpp  substractor.h
